...
  const handleAddChild = useCallback(() => {
    router.push(`/${EScreens.ChildAdd}` as any);
  }, [router]);

  return (
    <SafeAreaBgImage>
      <View testID="users-screen" style={styles.screen}>
      <ScreenHeader
        hasBackButton
        title={t('users.title')}
        containerStyle={styles.screenHeader}
      />
      <ScrollView contentContainerStyle={styles.container}>
...

        {isAdmin && (
          <View style={styles.sectionAction}>
            <Button
              mode="contained"
              onPress={handleAddChild}
              testID="users-add-child-button"
            >
              {t('users.add_child')}
            </Button>
          </View>
        )}
      </ScrollView>
...
