...
                  title={item.title}
                  description={item.description}
                  descriptionStyle={styles.description}
                  testID={
                    item.testID ??
                    (item.navigateTo === EScreens.Users
                      ? 'more-menu-users'
                      : undefined)
                  }
                  left={props => (
                    <item.Icon
                      {...props}
                      style={styles.icon}
...
